--- a/package.json
+++ b/package.json
@@ -21,7 +21,11 @@
     "@angular/platform-browser": "^4.2.4",
     "@angular/platform-browser-dynamic": "^4.2.4",
     "@angular/router": "^4.2.4",
+    "@ngrx/store": "^4.0.3",
+    "@ngrx/store-devtools": "^4.0.0",
+    "angularfire2": "^5.0.0-rc.1",
     "core-js": "^2.4.1",
+    "firebase": "^4.5.0",
     "rxjs": "^5.4.2",
     "zone.js": "^0.8.14"
   },
